# refloom

./: .editorconfig  .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  actrun.toml  cliff.toml  go.mod  go.sum
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  e2e-install.yml  full-validate.yml  pr-review.yml  release.yml
Formula/: refloom.rb
cmd/refloom/: main.go
config/: refloom.example.yaml
docs/: INDEX.md  fts-morphology-research.md  poc-evaluation.md
docs/adr/: 0000-template.md  0001-staged-extract-jobs.md  0002-go-python-dual-language.md  0003-sqlite-storage-and-search.md  0004-apple-vision-ocr.md  0005-ollama-nomic-embed-text.md  0006-llm-multi-provider-citation-budget.md  0007-persistent-worker-pool.md  0008-ocr-policy-and-caching.md  0009-embedding-parallel-batching.md  0010-adjacent-chunk-context.md  0011-binary-vector-quantization.md  0012-iterative-query-refinement.md  0013-lazy-graph-rag.md
docs/plans/: poc-search-improvements.md
docs/reports/: baseline-scores.json  codex-comparison-report.md  poc-final-report.md  scale-estimation.md  staged-extract-design.md
internal/citation/: citation.go  citation_test.go
internal/cli/: ask.go  configshow.go  delete.go  doctor.go  doctor_test.go  export.go  extract_job.go  extract_job_test.go  extract_workers.go  host_observation_test.go  ingest.go  ingest_test.go  inspect.go  reindex.go  reindex_test.go  root.go  (+5 more)
python/refloom_worker/: chunker.py  epub_extractor.py  main.py  ocr_vision.py  pdf_extractor.py  pyproject.toml  quality.py  requirements.txt  test_benchmark_extract_profile.py  test_chunker.py  test_epub_extractor.py  test_main.py  test_ocr_vision.py  test_pdf_extractor.py  test_quality.py
scripts/: benchmark_embedding.sh  benchmark_embedding_models.sh  benchmark_extract.sh  benchmark_extract_profile.py  benchmark_extract_summary.py  estimate_extract_parallelism.py  score_validation.py  setup-agent-skills.sh  validate_refloom.sh
testdata/: query-set.json
(+46 files in other folders)
