[project]
name = "refloom-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.25",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.13",
    "pyobjc-framework-Vision>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11.0; sys_platform == 'darwin'",
]

[tool.pytest.ini_options]
testpaths = ["."]

[dependency-groups]
dev = ["pytest>=8.0"]
